i dont know how or why but something made the menu button not respect the main sections after my supposed final commit of the night. This is to adjust for the menu overlapping the about section title due to the menu button being fixed

--- a/client/src/components/main/main.css
+++ b/client/src/components/main/main.css
@@ -18,3 +18,9 @@
   padding: 10px 0;
   box-shadow: 0 10px 10px var(--black-main);
 }
+
+@media only screen and (max-width: 860px) {
+  #container {
+    padding-top: 50px;
+  }
+}
